--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,6 +1,7 @@
 // hero
 
 .hero {
+  position: relative;
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -11,7 +12,14 @@
   row-gap: 25px;
   padding: 27px 35px 164px;
   background-color: $bg-color-secondary;
-  background-image: linear-gradient(to top, rgba($color: $bg-color-secondary, $alpha: 0.85), rgba($color: $bg-color-secondary, $alpha: 0.85)), image-set(url("../../images/hero/hero-background-mobile@1x.webp") 1x, url("../../images/hero/hero-background-mobile@2x.webp") 2x, url("../../images/hero/hero-background-mobile@1x.jpg") 1x, url("../../images/hero/hero-background-mobile@2x.jpg") 2x);
+  background-image:
+    linear-gradient(to top,
+    rgba($color: $bg-color-secondary, $alpha: 0.85),
+    rgba($color: $bg-color-secondary, $alpha: 0.85)),
+    image-set(url("../../images/hero/hero-background-mobile@1x.webp") 1x,
+    url("../../images/hero/hero-background-mobile@2x.webp") 2x,
+    url("../../images/hero/hero-background-mobile@1x.jpg") 1x,
+    url("../../images/hero/hero-background-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-position: 65% 50%;
   background-size: cover;
@@ -35,7 +43,7 @@
   display: flex;
   width: 280px;
   height: 270px;
-  margin: -135px auto 2px;
+  margin: -135px auto 3px;
 }
 
 .hero__button {
@@ -79,7 +87,41 @@
   .hero__button {
     position: absolute;
     left: 120px;
-    top: 370px;
+    top: 270px;
+    margin: 0;
+  }
+}
+
+// desktop
+
+@media (min-width: $desktop-width) {
+  .hero {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 10px 0 97px;
+  }
+
+  .hero__wrapper {
+    display: flex;
+    grid-template-columns: 190px 420px;
+    row-gap: 40px;
+    padding: 45px 0 10px 190px;
+    background: none;
+    color: $text-color-main;
+  }
+
+  .hero__image {
+    position: relative;
+    left: -247px;
+    top: -36px;
+    width: 552px;
+    height: 499px;
+    z-index: 1;
+  }
+
+  .hero__button {
+    position: absolute;
+    left: 190px;
+    top: 287px;
     margin: 0;
   }
 }
