--- a/source/styles/blocks/subscription.scss
+++ b/source/styles/blocks/subscription.scss
@@ -26,3 +26,35 @@
   flex-direction: column;
   gap: 16px;
 }
+
+// tablet
+
+@media (min-width: $tablet-width) {
+  .subscription__heading {
+    @include font-family($font-family-primary, 400, 32px, 100%);
+    padding: 0 0 67px;
+  }
+
+  .subscription__text {
+    @include font-family($font-family-primary, 400, 24px, 133%);
+  }
+
+  .subscription__form {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+// desktop
+
+@media (min-width: $desktop-width) {
+  .subscription__heading {
+    @include font-family($font-family-primary, 400, 40px, 100%);
+    padding: 0 0 70px;
+  }
+
+  .subscription__form {
+    justify-self: center;
+    width: 752px;
+  }
+}
