--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,4 +1,5 @@
 /* здесь используйте глобальные переменные */
+// dimensions
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
@@ -20,6 +21,7 @@ $bg-color-special-hover: #ebebeb;
 $decoration-color-main: #e6e6e6;
 $decoration-color-primary: #d9d9d9;
 $decoration-color-secondary: #cdcdcd;
+$decoration-color-hover: #bababa;
 
 // text
 $text-color-main: #000000;
