--- a/source/styles/blocks/card.scss
+++ b/source/styles/blocks/card.scss
@@ -15,19 +15,22 @@
 .card__link {
   display: flex;
   text-decoration: none;
+  transition: all 0.3s ease;
 
   &:hover {
-    opacity: 0.6;
+    transform: scale(1.1);
+    transition: all 0.3s ease;
   }
 
   &:focus-visible {
-    opacity: 0.6;
     outline: 2px solid $bg-color-secondary;
     outline-offset: -2px;
+    transform: scale(1.1);
+    transition: all 0.3s ease;
   }
 
   &:active {
-    opacity: 0.3;
+    opacity: 0.6;
   }
 }
 
@@ -38,8 +41,8 @@
 }
 
 .card__link--image {
-  grid-column: 1/2;
-  grid-row: 1/3;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
   justify-content: center;
   align-items: center;
 }
@@ -84,12 +87,8 @@
 }
 
 .card__button {
-  grid-column: 1/-1;
-  margin: 0;
-}
-
-.card__button--all {
-  margin: 0;
+  align-self: flex-end;
+  grid-column: 1 / -1;
 }
 
 .card__text {
@@ -107,9 +106,13 @@
     gap: 21px;
   }
 
+  .card__link--all {
+    justify-content: start;
+    gap: 23px;
+  }
+
   .card__link--image {
-    grid-row: 1/2;
-    justify-self: center;
+    grid-row: 1 / 2;
     min-width: 200px;
     min-height: 210px;
     margin: -70px 0 0;
@@ -122,6 +125,18 @@
     text-align: center;
   }
 
+  .card__title--all {
+    align-self: center;
+    gap: 50px;
+    width: 70%;
+  }
+
+  .card__title--all::before {
+    content: "";
+    width: 60px;
+    height: 60px;
+  }
+
   .card__title-wrapping {
     display: inline;
   }
@@ -132,5 +147,34 @@
 
   .card__button {
     margin: 0;
+  }
+
+  .card__text {
+    @include font-family($font-family-secondary, 400, 16px, 112%);
+    align-self: center;
+    width: 80%;
+  }
+}
+
+// desktop
+
+@media (min-width: $desktop-width) {
+  .card__link--image {
+    min-width: 168px;
+    margin: -70px 0 -10px;
+  }
+
+  .card__title--all {
+    gap: 39px;
+    width: 80%;
+  }
+
+  .card__text {
+    width: 100%;
+  }
+
+  .card__link--all {
+    justify-content: start;
+    gap: 24px;
   }
 }
