--- a/source/styles/blocks/htmlacademy.scss
+++ b/source/styles/blocks/htmlacademy.scss
@@ -31,6 +31,7 @@
 
 @media (min-width: $tablet-width) {
   .htmlacademy {
+    place-self: center end;
     justify-content: end;
     gap: 23px;
   }
