--- a/source/styles/blocks/invite.scss
+++ b/source/styles/blocks/invite.scss
@@ -59,3 +59,29 @@
     min-height: 400px;
   }
 }
+
+// desktop
+
+@media (min-width: $desktop-width) {
+  .invite {
+    position: relative;
+  }
+
+  .invite__wrapper {
+    position: absolute;
+    display: flex;
+    gap: 95px;
+    top: 97px;
+    left: 110px;
+    padding: 60px 80px 39px;
+    background-color: $bg-color-main;
+  }
+
+  .invite__heading {
+    text-align: left;
+  }
+
+  .invite__text {
+    text-align: left;
+  }
+}
