--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -2,16 +2,16 @@
 
 .logo--header {
   &:hover {
-    opacity: 0.6;
+    opacity: 0.8;
   }
 
   &:focus-visible {
-    opacity: 0.6;
+    opacity: 0.8;
     outline: 2px solid $bg-color-secondary;
   }
 
   &:active {
-    opacity: 0.3;
+    opacity: 0.6;
   }
 }
 
@@ -40,6 +40,11 @@
 // tablet
 
 @media (min-width: $tablet-width) {
+  .logo--header {
+    place-self: center start;
+  }
+
+
   .logo--footer {
     place-self: center start;
   }
