--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -2,6 +2,7 @@
 
 .navigation {
   position: relative;
+  z-index: 1;
 }
 
 .navigation__list {
@@ -11,24 +12,21 @@
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  max-height: 1000px;
+  max-height: 500px;
   background-color: $bg-color-main;
-  opacity: 1;
   overflow: hidden;
   transition: all 0.3s ease;
 }
 
 .navigation__list--closed {
   max-height: 0;
-  opacity: 0;
   transition: all 0.3s ease;
 }
 
 .navigation__list--no-js {
   position: static;
   display: block;
-  max-height: 1000px;
-  opacity: 1;
+  max-height: 500px;
   transition: all 0.3s ease;
 }
 
@@ -50,16 +48,16 @@
   color: $text-color-main;
 
   &:hover {
-    opacity: 0.6;
+    opacity: 0.8;
   }
 
   &:focus-visible {
-    opacity: 0.6;
+    opacity: 0.8;
     outline: 2px solid $bg-color-secondary;
   }
 
   &:active {
-    opacity: 0.3;
+    opacity: 0.6;
   }
 }
 
@@ -78,6 +76,7 @@
     justify-content: flex-end;
     flex-flow: row wrap;
     gap: 4px;
+    background-color: inherit;
   }
 
   .navigation__item {
@@ -87,10 +86,10 @@
   .navigation__link {
     @include font-family($font-family-primary, 400, 18px, 133%);
     position: relative;
+    display: flex;
     border: none;
     margin: 2px;
     padding: 8px 13px;
-    display: flex;
   }
 
   .navigation__link--current::after {
@@ -104,7 +103,57 @@
   }
 
   .navigation__list--closed {
-    max-height: 1000px;
-    opacity: 1;
+    max-height: 500px;
+  }
+}
+
+// desktop
+
+@media (min-width: $desktop-width) {
+  .navigation {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .navigation__list--auxiliary {
+    .navigation__link {
+      color: $text-color-secondary;
+
+      &:focus-visible {
+        outline: 2px solid $bg-color-main;
+      }
+    }
+
+    .navigation__link--current::after {
+      background-color: $bg-color-main;
+    }
+  }
+
+  .navigation--auxiliary::before {
+    content: "";
+    position: absolute;
+    top: -55px;
+    left: 0;
+    width: calc(100% + 110px);
+    height: 694px;
+    background-color: $bg-color-secondary;
+    background-image:
+      linear-gradient(to top,
+      rgba($color: $bg-color-secondary, $alpha: 0.85),
+      rgba($color: $bg-color-secondary, $alpha: 0.85)),
+      image-set(url("../../images/hero/hero-background-desktop@1x.webp") 1x,
+      url("../../images/hero/hero-background-desktop@2x.webp") 2x,
+      url("../../images/hero/hero-background-desktop@1x.jpg") 1x,
+      url("../../images/hero/hero-background-desktop@2x.jpg") 2x);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .navigation__link {
+    @include font-family($font-family-primary, 400, 20px, 100%);
+    padding: 12px 13px;
   }
 }
