--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -64,7 +64,7 @@
   display: flex;
   flex-direction: column;
   gap: 22px;
-  grid-column: 1/-1;
+  grid-column: 1 / -1;
   margin: 0;
   color: $text-color-special;
 }
@@ -81,15 +81,17 @@
 .programs__link {
   @include font-family($font-family-primary, 400, 16px, 100%);
   position: relative;
-  grid-column: 1/-1;
+  grid-column: 1 / -1;
   display: flex;
   align-items: center;
+  place-self: center start;
   gap: 18px;
   margin: 10px 0 0;
   padding: 10px 0;
   text-transform: uppercase;
   text-decoration: none;
   color: $text-color-main;
+
 
   &:hover {
     .programs__link-icon {
@@ -107,7 +109,7 @@
   }
 
   &:active {
-    opacity: 0.3;
+    opacity: 0.6;
   }
 }
 
@@ -122,7 +124,7 @@
 
   .programs__item::before {
     grid-column: 2 / 3;
-    grid-row: 1/ 5;
+    grid-row: 1 / 5;
     width: 200px;
     height: 200px;
     margin-bottom: 38px;
@@ -146,13 +148,13 @@
 
   .programs__title {
     @include font-family($font-family-primary, 400, 36px, 100%);
-    grid-column: 1/2;
+    grid-column: 1 / 2;
     color: $text-color-main;
   }
 
   .programs__text {
     @include font-family($font-family-secondary, 400, 16px, 150%);
-    grid-column: 1/2;
+    grid-column: 1 / 2;
     color: $text-color-main;
   }
 
@@ -162,12 +164,69 @@
 
   .programs__link {
     @include font-family($font-family-primary, 400, 20px, 100%);
-    grid-column: 1/2;
+    grid-column: 1 / 2;
     gap: 35px 25px;
     margin: 23px 0 0;
   }
 
   .programs__list {
     gap: 30px;
+  }
+}
+
+// desktop
+
+@media (min-width: $desktop-width) {
+  .programs__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px 80px;
+  }
+
+  .programs__item {
+    grid-template-columns: auto 1fr;
+    gap: 23px 62px;
+    padding: 48px 63px 55px 52px;
+  }
+
+  .programs__item::before {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 0;
+  }
+
+  .programs__item--cat-back::after {
+    top: 40px;
+    left: 52px;
+    right: inherit;
+    width: 100px;
+    height: 106px;
+  }
+
+  .programs__item--cat-pro::after {
+    top: 45px;
+    left: 32px;
+    right: inherit;
+    width: 134px;
+    height: 100px;
+  }
+
+  .programs__title {
+    @include font-family($font-family-primary, 400, 36px, 100%);
+    grid-column: 2 / 3;
+  }
+
+  .programs__text {
+    @include font-family($font-family-secondary, 400, 16px, 150%);
+    grid-column: 1 / 3;
+    margin-top: 15px;
+  }
+
+  .programs__link {
+    @include font-family($font-family-primary, 400, 20px, 100%);
+    grid-column: 1 / 3;
+    gap: 35px 25px;
+    margin: 0;
   }
 }
