--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -22,6 +22,8 @@ $decoration-color-main: #e6e6e6;
 $decoration-color-primary: #d9d9d9;
 $decoration-color-secondary: #cdcdcd;
 $decoration-color-hover: #bababa;
+$decoration-color-focus: #444444;
+$decoration-color-error: #ff8282;
 
 // text
 $text-color-main: #000000;
