--- a/source/styles/blocks/control.scss
+++ b/source/styles/blocks/control.scss
@@ -18,12 +18,31 @@
     }
   }
 
+  &:has(.control__icon:hover) {
+    .control__input {
+      outline: 2px solid $decoration-color-focus;
+    }
+  }
+
   &:has(.control__input[type="radio"]:active) {
     opacity: 0.6;
   }
 
+  &:has(.control__input[type="radio"]:disabled:active) {
+    opacity: 0.3;
+  }
+
   &:has(.control__input[type="checkbox"]:active) {
     opacity: 0.6;
+  }
+
+  &:has(.control__input[type="checkbox"]:disabled:active) {
+    opacity: 0.3;
+  }
+
+  &:has(:disabled) {
+    cursor: default;
+    opacity: 0.3;
   }
 }
 
@@ -66,10 +85,18 @@
   &:focus-visible {
     outline: 2px solid $decoration-color-hover;
   }
+
+  &:disabled {
+    outline: none;
+  }
 }
 
 .control__input:focus-visible + .control__mark {
   outline: 2px solid $decoration-color-hover;
+}
+
+.control__input:disabled:hover + .control__mark {
+  outline: none;
 }
 
 .control__input--medium {
@@ -81,10 +108,18 @@
   padding: 10px 42px 10px 14px;
 }
 
+.control__input--invalid {
+  outline: 2px solid $decoration-color-error;
+}
+
 .control__icon {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+
+  &:hover {
+    color: $bg-color-secondary;
+  }
 }
 
 .control__icon--email {
@@ -134,6 +169,19 @@
   padding: 17px 14px 25px;
   min-height: 110px;
   text-transform: uppercase;
+
+  &:hover {
+    cursor: text;
+  }
+
+  &:focus-visible {
+    cursor: text;
+    outline: 2px solid $decoration-color-hover;
+  }
+
+  &:disabled {
+    cursor: default;
+  }
 }
 
 // tablet
