--- a/source/styles/blocks/invite.scss
+++ b/source/styles/blocks/invite.scss
@@ -31,6 +31,15 @@
 .invite__map {
   width: 100%;
   min-height: 362px;
+  border: none;
+  background-color: $bg-color-primary;
+  background-image:
+    image-set(url("../../images/map@1x.webp") 1x,
+    url("../../images/map@2x.webp") 2x,
+    url("../../images/map@1x.png") 1x,
+    url("../../images/map@2x.png") 2x);
+  background-size: cover;
+  background-position: center center;
 }
 
 // tablet
