--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -12,10 +12,11 @@
   flex-direction: column;
   align-items: stretch;
   width: 100%;
-  max-height: 500px;
+  max-height: 100vh;
   background-color: $bg-color-main;
   overflow: hidden;
   transition: all 0.3s ease;
+  z-index: 1;
 }
 
 .navigation__list--closed {
@@ -26,7 +27,7 @@
 .navigation__list--no-js {
   position: static;
   display: block;
-  max-height: 500px;
+  max-height: 100vh;
   transition: all 0.3s ease;
 }
 
@@ -43,6 +44,7 @@
   align-items: center;
   margin: 10px;
   padding: 12px 14px;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   color: $text-color-main;
@@ -103,7 +105,7 @@
   }
 
   .navigation__list--closed {
-    max-height: 500px;
+    max-height: 100vh;
   }
 }
 
@@ -136,7 +138,7 @@
     position: absolute;
     top: -55px;
     left: 0;
-    width: calc(100% + 110px);
+    width: calc(100% + 96px);
     height: 694px;
     background-color: $bg-color-secondary;
     background-image:
