--- a/source/styles/blocks/subscription.scss
+++ b/source/styles/blocks/subscription.scss
@@ -8,9 +8,20 @@
 .subscription__heading {
   @include font-family($font-family-primary, 400, 24px, 100%);
   display: flex;
-  margin: 0;
+  gap: 40px;
+  margin: 0 -20px 0 0;
   padding: 0 0 32px;
   color: $text-color-main;
+}
+
+.subscription__heading::after {
+  content: "";
+  position: relative;
+  min-width: 20px;
+  height: 2px;
+  flex-grow: 1;
+  top: 10px;
+  background-color: $bg-color-secondary;
 }
 
 .subscription__text {
@@ -32,7 +43,22 @@
 @media (min-width: $tablet-width) {
   .subscription__heading {
     @include font-family($font-family-primary, 400, 32px, 100%);
-    padding: 0 0 67px;
+    margin: 0 -68px;
+    padding: 0 0 66px;
+  }
+
+  .subscription__heading::before {
+    content: "";
+    position: relative;
+    top: 13px;
+    min-width: 30px;
+    height: 2px;
+    background-color: $bg-color-secondary;
+  }
+
+  .subscription__heading::after {
+    top: 13px;
+    min-width: 30px;
   }
 
   .subscription__text {
@@ -50,7 +76,18 @@
 @media (min-width: $desktop-width) {
   .subscription__heading {
     @include font-family($font-family-primary, 400, 40px, 100%);
+    margin: 0 -110px;
     padding: 0 0 70px;
+  }
+
+  .subscription__heading::before {
+    top: 17px;
+    min-width: 70px;
+  }
+
+  .subscription__heading::after {
+    top: 17px;
+    min-width: 70px;
   }
 
   .subscription__form {
