--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -10,9 +10,11 @@
 .programs__item {
   position: relative;
   display: grid;
-  align-items: center;
+  // align-items: center;
   gap: 22px 20px;
   grid-template-columns: auto 1fr;
+  // justify-content: start;
+  // align-items: start;
   padding: 24px 20px 12px;
   background-color: $bg-color-primary;
 }
@@ -52,8 +54,7 @@
 
 .programs__title {
   @include font-family($font-family-primary, 400, 24px, 154%);
-  align-self: center;
-  margin: 0;
+  margin: 6px 0 0;
   text-transform: uppercase;
   color: $text-color-main;
 }
@@ -127,7 +128,9 @@
     grid-row: 1 / 5;
     width: 200px;
     height: 200px;
-    margin-bottom: 38px;
+    margin: 15px 0 38px;
+    //
+    // align-self: start;
   }
 
   .programs__item--cat-back::after {
@@ -149,6 +152,7 @@
   .programs__title {
     @include font-family($font-family-primary, 400, 36px, 100%);
     grid-column: 1 / 2;
+    margin: 0;
     color: $text-color-main;
   }
 
@@ -193,7 +197,7 @@
     grid-row: 1 / 2;
     width: 100px;
     height: 100px;
-    margin-bottom: 0;
+    margin: 0;
   }
 
   .programs__item--cat-back::after {
@@ -215,6 +219,7 @@
   .programs__title {
     @include font-family($font-family-primary, 400, 36px, 100%);
     grid-column: 2 / 3;
+    margin: 30px 0 0;
   }
 
   .programs__text {
