--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -85,11 +85,14 @@
   }
 
   .hero__button {
-    position: absolute;
-    left: 120px;
-    top: 270px;
+    // position: absolute;
+    // left: 120px;
+    // top: 270px;
+    grid-row: 2/3;
+    justify-self: start;
     max-width: 400px;
-    margin: 0;
+    margin: 0 0 -53px;
+    transform: translate(90px, 29px);
   }
 }
 
@@ -105,24 +108,26 @@
     display: flex;
     grid-template-columns: 190px 420px;
     row-gap: 40px;
-    padding: 45px 0 10px 190px;
+    padding: 45px 60px 10px 190px;
     background: none;
     color: $text-color-main;
   }
 
   .hero__image {
-    position: relative;
-    left: -247px;
-    top: -36px;
+    position: absolute;
+    left: 557px;
+    top: -26px;
     width: 552px;
     height: 499px;
     z-index: 1;
   }
 
   .hero__button {
-    position: absolute;
-    left: 190px;
-    top: 287px;
-    margin: 0;
+    grid-column: 1 / 2;
+    // position: absolute;
+    // left: 190px;
+    // top: 287px;
+    margin: 13px 0 198px 100px;
+    letter-spacing: 0.1px;
   }
 }
