фикс замечаний Pixel Perfect / отмена фикс верстки

--- a/source/styles/blocks/page-body.scss
+++ b/source/styles/blocks/page-body.scss
@@ -26,7 +26,7 @@
 
 @media (min-width: $desktop-width) {
   .page-body {
-    max-width: $desktop-width;
+    min-width: $desktop-width;
   }
 
   .page-body__page-header {
