--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -115,7 +115,7 @@
 
   .hero__image {
     position: absolute;
-    left: 557px;
+    left: 38.7%;
     top: -26px;
     width: 552px;
     height: 499px;
