--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -3,6 +3,7 @@
 $mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1440px;
+$container-width: 1220px;
 
 // fonts
 $font-family-primary: "Oswald", "Arial", sans-serif;
