--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,9 +1,10 @@
 // example
 
-.example {
+.example__wrapper {
   display: grid;
   grid-template-columns: 1fr;
   gap: 19px;
+  padding: 25px 20px 42px;
   background-color: $bg-color-auxiliary;
 }
 
@@ -11,6 +12,12 @@
   @include font-family($font-family-primary, 400, 36px, 111%);
   margin: 0 0 20px;
   color: $text-color-main;
+}
+
+.example__container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 19px;
 }
 
 .example__text {
@@ -68,13 +75,16 @@
 
 @media (min-width: $tablet-width) {
   .example {
-    grid-template-columns: 5.1fr 4fr;
-    gap: 55px;
-    background-color: $bg-color-main;
     border-top: 1px solid $decoration-color-main;
   }
 
-  .example::after {
+  .example__wrapper {
+    gap: 55px;
+    padding: 45px 30px 0;
+    background-color: $bg-color-main;
+  }
+
+  .example__wrapper::after {
     content: "";
     grid-column: 1 / -1;
     width: calc(100% + 60px);
@@ -88,6 +98,12 @@
     grid-column: 1 / -1;
     margin: 0 0 5px;
     color: $text-color-main;
+  }
+
+  .example__container {
+    grid-template-columns: 5.1fr 4fr;
+    grid-column: 1 / -1;
+    gap: 55px;
   }
 
   .example__text {
@@ -133,57 +149,73 @@
 
 @media (min-width: $desktop-width) {
   .example {
+    border-top: none;
+  }
+
+  .example__wrapper {
     display: grid;
-    grid-template-columns: 1fr auto;
-    gap: 0 230px;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
+    margin: 0 auto;
+    padding: 0;
     border: none;
   }
 
-  .example::before {
+  .example__wrapper::before {
     content: "";
     grid-column: 1 / -1;
-    grid-row: 2 / 6;
-    width: calc(100% + 220px);
+    grid-row: 2 / 3;
+    width: calc(100%);
     min-height: 0;
-    margin: 0 -110px;
+    margin: 0;
     background-color: $bg-color-primary;
     z-index: 0;
   }
 
-  .example::after {
+  .example__wrapper::after {
     display: none;
   }
 
   .example__heading {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    margin: 0 0 76px;
+    width: calc($container-width / 2);
+    margin: 0 0 75px auto;
+  }
+
+  .example__container {
+    grid-template-columns: 1fr;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    gap: 50px;
+    width: calc($container-width / 2);
+    margin: 70px 0 70px auto;
   }
 
   .example__text {
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    margin: 70px 0 0;
+    grid-row: 1 / 2;
+    width: calc($container-width / 2.82);
+    margin: 0 0 4px;
     z-index: 1;
   }
 
   .example__list {
     grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    grid-row: 2 / 3;
     gap: 43px;
-    width: 85%;
-    margin: 69px 0 0;
+    width: calc($container-width / 3.35);
+    margin: 15px 0 0;
     z-index: 1;
   }
 
   .example__description {
     grid-column: 1 / 2;
-    grid-row: 4 / 6;
+    grid-row: 3 / 4;
     place-self: flex-end start;
     display: flex;
     gap: 63px;
     z-index: 1;
-    margin: 50px 0 68px;
     padding: 0;
   }
 
@@ -197,7 +229,8 @@
 
   .example__slider {
     grid-column: 2 / -1;
-    grid-row: 1 / 5;
-    margin: 0;
+    grid-row: 1 / 3;
+    width: calc($container-width / 2);
+    margin: 0 0 0 50px;
   }
 }
