--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -98,6 +98,8 @@
 @media (min-width: $desktop-width) {
   .hero {
     grid-template-columns: repeat(2, 1fr);
+    width: $desktop-width;
+    margin: 0 auto;
     padding: 10px 0 97px;
   }
 
