--- a/source/styles/blocks/page-main.scss
+++ b/source/styles/blocks/page-main.scss
@@ -9,7 +9,7 @@
 }
 
 .page-main__example {
-  padding: 25px 20px 42px;
+  padding: 0;
 }
 
 .page-main__catalog {
@@ -62,7 +62,7 @@
   }
 
   .page-main__example {
-    padding: 45px 30px 0;
+    padding: 0;
   }
 
   .page-main__other {
@@ -93,15 +93,15 @@
 
 @media (min-width: $desktop-width) {
   .page-main__programs {
-    padding: 0 110px;
+    padding: 0;
   }
 
   .page-main__functional {
-    padding: 70px 110px 43px;
+    padding: 70px 0 43px;
   }
 
   .page-main__example {
-    padding: 23px 110px 0;
+    padding: 23px 0 0;
   }
 
   .page-main__other {
