--- a/source/styles/blocks/other.scss
+++ b/source/styles/blocks/other.scss
@@ -191,24 +191,38 @@
   .other {
     grid-template-columns: 110fr 30fr;
     gap: 0 80px;
+    width: $container-width;
+    margin: 0 auto;
   }
 
   .other__heading {
     @include font-family($font-family-primary, 400, 40px, 100%);
     grid-column: 1 / -1;
     gap: 40px;
-    margin: 0 -110px;
+    margin: 0;
     padding: 0 0 80px;
+    // line-height: 1;
+    // position: relative;
+    width: max-content;
+    background: #ffffff;
+    box-shadow: -40px 0 0 0 #ffffff, 40px 0 0 0 #ffffff;
   }
 
   .other__heading::before {
+    content: "";
+    // display: block;
+    position: absolute;
+    height: 2px;
+    width: 100vw;
     top: 18px;
-    min-width: 70px;
+    right: 0;
+    z-index: -1;
+    background: #68b738;
+    box-shadow: 110vw 0 0 0 #68b738;
   }
 
   .other__heading::after {
-    top: 18px;
-    min-width: 70px;
+    display: none;
   }
 
   .other__item {
