правка страницы каталога

--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -58,9 +58,9 @@
 
 @media (min-width: $desktop-width) {
   .catalog {
-    width: $desktop-width;
+    width: $container-width;
     margin: 0 auto;
-    padding: 10px 110px;
+    padding: 10px 0;
   }
 
   .catalog__list {
