--- a/source/styles/blocks/other.scss
+++ b/source/styles/blocks/other.scss
@@ -199,26 +199,25 @@
     @include font-family($font-family-primary, 400, 40px, 100%);
     grid-column: 1 / -1;
     gap: 40px;
+    width: max-content;
     margin: 0;
     padding: 0 0 80px;
-    // line-height: 1;
-    // position: relative;
-    width: max-content;
-    background: #ffffff;
-    box-shadow: -40px 0 0 0 #ffffff, 40px 0 0 0 #ffffff;
+    background: $bg-color-main;
+    box-shadow:
+      -40px 0 0 0 $bg-color-main,
+      40px 0 0 0 $bg-color-main;
   }
 
   .other__heading::before {
     content: "";
-    // display: block;
     position: absolute;
     height: 2px;
     width: 100vw;
     top: 18px;
     right: 0;
     z-index: -1;
-    background: #68b738;
-    box-shadow: 110vw 0 0 0 #68b738;
+    background: $bg-color-secondary;
+    box-shadow: 100vw 0 0 0 $bg-color-secondary;
   }
 
   .other__heading::after {
