--- a/source/styles/blocks/page-main.scss
+++ b/source/styles/blocks/page-main.scss
@@ -105,11 +105,11 @@
   }
 
   .page-main__other {
-    padding: 60px 110px 0;
+    padding: 60px 0 0;
   }
 
   .page-main__subscription {
-    padding: 97px 110px 25px;
+    padding: 96px 0 25px;
   }
 
   .page-main__heading {
