--- a/source/styles/blocks/invite.scss
+++ b/source/styles/blocks/invite.scss
@@ -80,10 +80,11 @@
     position: absolute;
     display: flex;
     gap: 95px;
-    top: 97px;
-    left: 110px;
+    top: 50%;
+    left: 50%;
     padding: 60px 80px 39px;
     background-color: $bg-color-main;
+    transform: translate(-610px, -52%);
   }
 
   .invite__heading {
