--- a/source/styles/blocks/functional.scss
+++ b/source/styles/blocks/functional.scss
@@ -35,6 +35,7 @@
   width: 60px;
   height: 60px;
   background-color: $bg-color-secondary;
+  align-self: start;
 }
 
 .functional__text--leaf::before {
@@ -95,6 +96,26 @@
     left: 114px;
   }
 
+  .functional__item--one::before {
+    top: -3px;
+    left: 119px;
+  }
+
+  .functional__item--two::before {
+    top: -2px;
+    left: 112px;
+  }
+
+  .functional__item--three::before {
+    top: -2px;
+    left: 114px;
+  }
+
+  .functional__item--four::before {
+    top: -2px;
+    left: 114px;
+  }
+
   .functional__text {
     @include font-family($font-family-secondary, 400, 16px, 150%);
     grid-template-columns: 1fr;
@@ -142,5 +163,25 @@
 
   .functional__item::before {
     left: 116px;
+  }
+
+  .functional__item--one::before {
+    top: -3px;
+    left: 119px;
+  }
+
+  .functional__item--two::before {
+    top: -2px;
+    left: 112px;
+  }
+
+  .functional__item--three::before {
+    top: -2px;
+    left: 114px;
+  }
+
+  .functional__item--four::before {
+    top: -2px;
+    left: 114px;
   }
 }
