--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -58,7 +58,9 @@
 
 @media (min-width: $desktop-width) {
   .catalog {
-    padding: 10px 110px;
+    width: $container-width;
+    margin: 0 auto;
+    padding: 10px 0;
   }
 
   .catalog__list {
